ros-native/src/ros-native/include/callback_queue.h

typedef struct callback_queue callback_queue;