ros-sys/src/ros/ffi.rs

#[doc = " Don't install a SIGINT handler.  You should install your own SIGINT handler in this"]
#[doc = " case, to ensure that the node gets shutdown correctly when it exits."]
pub const InitOption_NoSigintHandler: InitOption = 1;
#[doc = " \\brief Anonymize the node name.  Adds a random number to the end of your node's name, to make it unique."]
pub const InitOption_AnonymousName: InitOption = 2;
#[doc = " \\brief Don't broadcast rosconsole output to the /rosout topic"]
pub const InitOption_NoRosout: InitOption = 4;
pub type InitOption = ::std::os::raw::c_uint;
extern "C" {
    #[doc = " @brief ROS initialization function."]
    #[doc = ""]
    #[doc = " This function will parse any ROS arguments (e.g., topic name"]
    #[doc = " remappings), and will consume them (i.e., argc and argv may be modified"]
    #[doc = " as a result of this call)."]
    #[doc = ""]
    #[doc = " Use this version if you are using the NodeHandle API"]
    #[doc = ""]
    #[doc = " \\param argc"]
    #[doc = " \\param argv"]
    #[doc = " \\param name Name of this node.  The name must be a base name, ie. it cannot contain namespaces."]
    #[doc = " \\param options [optional] Options to start the node with (a set of bit flags from \\ref ros::init_options)"]
    #[doc = " \\throws InvalidNodeNameException If the name passed in is not a valid \"base\" name"]
    #[doc = ""]
    pub fn ros_init(name: *const ::std::os::raw::c_uchar, options: u32);
}
extern "C" {
    #[doc = " \\brief Returns whether or not ros::init() has been called"]
    pub fn ros_isInitialized() -> bool;
}
extern "C" {
    #[doc = " \\brief Returns whether or not ros::shutdown() has been (or is being) called"]
    pub fn ros_isShuttingDown() -> bool;
}
extern "C" {
    #[doc = " \\brief Enter simple event loop"]
    #[doc = ""]
    #[doc = " This method enters a loop, processing callbacks.  This method should only be used"]
    #[doc = " if the NodeHandle API is being used."]
    #[doc = ""]
    #[doc = " This method is mostly useful when your node does all of its work in"]
    #[doc = " subscription callbacks.  It will not process any callbacks that have been assigned to"]
    #[doc = " custom queues."]
    #[doc = ""]
    pub fn ros_spin();
}
extern "C" {
    #[doc = " \\brief Process a single round of callbacks."]
    #[doc = ""]
    #[doc = " This method is useful if you have your own loop running and would like to process"]
    #[doc = " any callbacks that are available.  This is equivalent to calling callAvailable() on the"]
    #[doc = " global CallbackQueue.  It will not process any callbacks that have been assigned to"]
    #[doc = " custom queues."]
    pub fn ros_spinOnce();
}
extern "C" {
    #[doc = " \\brief Wait for this node to be shutdown, whether through Ctrl-C, ros::shutdown(), or similar."]
    pub fn ros_waitForShutdown();
}
extern "C" {
    #[doc = " \\brief Check whether it's time to exit."]
    #[doc = ""]
    #[doc = " ok() becomes false once ros::shutdown() has been called and is finished"]
    #[doc = ""]
    #[doc = " \\return true if we're still OK, false if it's time to exit"]
    pub fn ros_ok() -> bool;
}
extern "C" {
    #[doc = " \\brief Disconnects everything and unregisters from the master.  It is generally not"]
    #[doc = " necessary to call this function, as the node will automatically shutdown when all"]
    #[doc = " NodeHandles destruct.  However, if you want to break out of a spin() loop explicitly,"]
    #[doc = " this function allows that."]
    pub fn ros_shutdown();
}
extern "C" {
    #[doc = " \\brief Request that the node shut itself down from within a ROS thread"]
    #[doc = ""]
    #[doc = " This method signals a ROS thread to call shutdown()."]
    pub fn ros_requestShutdown();
}
extern "C" {
    #[doc = " \\brief Actually starts the internals of the node (spins up threads, starts the network polling and xmlrpc loops,"]
    #[doc = " connects to internal subscriptions like /clock, starts internal service servers, etc.)."]
    #[doc = ""]
    #[doc = " Usually unnecessary to call manually, as it is automatically called by the creation of the first NodeHandle if"]
    #[doc = " the node has not already been started.  If you would like to prevent the automatic shutdown caused by the last"]
    #[doc = " NodeHandle going out of scope, call this before any NodeHandle has been created (e.g. immediately after init())"]
    pub fn ros_start();
}
extern "C" {
    #[doc = " \\brief Returns whether or not the node has been started through ros::start()"]
    pub fn ros_isStarted() -> bool;
}
extern "C" {
    #[doc = " \\brief Returns a pointer to the global default callback queue."]
    #[doc = ""]
    #[doc = " This is the queue that all callbacks get added to unless a different one is specified, either in the NodeHandle"]
    #[doc = " or in the individual NodeHandle::subscribe()/NodeHandle::advertise()/etc. functions."]
    pub fn ros_getGlobalCallbackQueue() -> *mut callback_queue;
}
extern "C" {
    #[doc = " \\brief searches the command line arguments for the given arg parameter. In case this argument is not found"]
    #[doc = " an empty string is returned."]
    #[doc = ""]
    #[doc = " \\param argc the number of command-line arguments"]
    #[doc = " \\param argv the command-line arguments"]
    #[doc = " \\param arg argument to search for"]
    pub fn ros_getROSArg(
        argc: ::std::os::raw::c_int,
        argv: *const *const ::std::os::raw::c_char,
        arg: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_uchar;
}
extern "C" {
    #[doc = " \\brief returns the default master uri that is used if no other is specified, e.g. by defining ROS_MASTER_URI."]
    pub fn ros_getDefaultMasterURI(len: *mut i32) -> *const ::std::os::raw::c_uchar;
}
extern "C" {
    #[doc = " @brief Get the hostname where the master runs."]
    #[doc = ""]
    #[doc = " @return The master's hostname, as a string"]
    pub fn ros_master_getHost(len: *mut i32) -> *const ::std::os::raw::c_uchar;
}
extern "C" {
    #[doc = " @brief Get the port where the master runs."]
    #[doc = ""]
    #[doc = " @return The master's port."]
    pub fn ros_master_getPort() -> u32;
}
extern "C" {
    #[doc = " \\brief Get the full URI to the master (eg. http://host:port/)"]
    pub fn ros_master_getURI(len: *mut i32) -> *const ::std::os::raw::c_uchar;
}
extern "C" {
    #[doc = " @brief Check whether the master is up"]
    #[doc = ""]
    #[doc = " This method tries to contact the master.  You can call it any time"]
    #[doc = " after ros::init has been called.  The intended usage is to check"]
    #[doc = " whether the master is up before trying to make other requests"]
    #[doc = " (subscriptions, advertisements, etc.)."]
    #[doc = ""]
    #[doc = " @returns true if the master is available, false otherwise."]
    pub fn ros_master_check() -> bool;
}
extern "C" {
    #[doc = " @brief Get the list of topics that are being published by all nodes."]
    #[doc = ""]
    #[doc = " This method communicates with the master to retrieve the list of all"]
    #[doc = " currently advertised topics."]
    #[doc = ""]
    #[doc = " @param topics A place to store the resulting list.  Each item in the"]
    #[doc = " list is a pair <string topic, string type>.  The type is represented"]
    #[doc = " in the format \"package_name/MessageName\", and is also retrievable"]
    #[doc = " through message.__getDataType() or MessageName::__s_getDataType()."]
    #[doc = ""]
    #[doc = " @return true on success, false otherwise (topics not filled in)"]
    pub fn ros_master_getTopics(topics: *mut *mut ::std::os::raw::c_uchar, len: *mut i32) -> bool;
}
extern "C" {
    #[doc = " \\brief Retreives the currently-known list of nodes from the master"]
    pub fn ros_master_getNodes(nodes: *mut *mut ::std::os::raw::c_uchar, len: *mut i32) -> bool;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct subscriber {
    _unused: [u8; 0],
}
extern "C" {
    pub fn subscriber_create() -> *mut subscriber;
}
extern "C" {
    pub fn subscriber_destroy(sub: *mut subscriber);
}
extern "C" {
    #[doc = " \\brief Unsubscribe the callback associated with this Subscriber"]
    #[doc = ""]
    #[doc = " This method usually does not need to be explicitly called, as automatic shutdown happens when"]
    #[doc = " all copies of this Subscriber go out of scope"]
    #[doc = ""]
    #[doc = " This method overrides the automatic reference counted unsubscribe, and immediately"]
    #[doc = " unsubscribes the callback associated with this Subscriber"]
    pub fn subscriber_shutdown(sub: *mut subscriber);
}
extern "C" {
    pub fn subscriber_getTopic(sub: *mut subscriber) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\brief Returns the number of publishers this subscriber is connected to"]
    pub fn subscriber_getNumPublishers(sub: *mut subscriber) -> u32;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct publisher {
    _unused: [u8; 0],
}
extern "C" {
    pub fn publisher_create() -> *mut publisher;
}
extern "C" {
    pub fn publisher_destroy(pub_: *mut publisher);
}
extern "C" {
    #[doc = " \\brief Shutdown the advertisement associated with this Publisher"]
    #[doc = ""]
    #[doc = " This method usually does not need to be explicitly called, as automatic shutdown happens when"]
    #[doc = " all copies of this Publisher go out of scope"]
    #[doc = ""]
    #[doc = " This method overrides the automatic reference counted unadvertise, and does so immediately."]
    #[doc = " \\note Note that if multiple advertisements were made through NodeHandle::advertise(), this will"]
    #[doc = " only remove the one associated with this Publisher"]
    pub fn publisher_shutdown(pub_: *mut publisher);
}
extern "C" {
    #[doc = " \\brief Returns the topic that this Publisher will publish on."]
    pub fn publisher_getTopic(pub_: *mut publisher) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\brief Returns the number of subscribers that are currently connected to this Publisher"]
    pub fn publisher_getNumSubscribers(pub_: *mut publisher) -> u32;
}
extern "C" {
    #[doc = " \\brief Returns whether or not this topic is latched"]
    pub fn publisher_isLatched() -> bool;
}
extern "C" {
    pub fn publisher_publish(pub_: *mut publisher, message: *const ::std::os::raw::c_char);
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct node_handle {
    _unused: [u8; 0],
}
extern "C" {
    pub fn node_handle_create(nh: *const ::std::os::raw::c_char) -> *mut node_handle;
}
extern "C" {
    pub fn node_handle_destroy(nh: *mut node_handle);
}
extern "C" {
    #[doc = " \\brief Set the default callback queue to be used by this NodeHandle."]
    #[doc = ""]
    #[doc = " Setting this will cause any callbacks from"]
    #[doc = " advertisements/subscriptions/services/etc. to happen through the"]
    #[doc = " use of the specified queue.  NULL (the default) causes the global"]
    #[doc = " queue (serviced by ros::spin() and ros::spinOnce()) to be used."]
    pub fn node_handle_setCallbackQueue(nh: *mut node_handle, queue: *mut callback_queue);
}
extern "C" {
    #[doc = " \\brief Returns the callback queue associated with this"]
    #[doc = " NodeHandle.  If none has been explicitly set, returns the global"]
    #[doc = " queue."]
    pub fn node_handle_getCallbackQueue(nh: *mut node_handle) -> *mut callback_queue;
}
extern "C" {
    #[doc = " \\brief Returns the namespace associated with this NodeHandle"]
    pub fn node_handle_getNamespace(nh: *mut node_handle) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\brief Returns the namespace associated with this NodeHandle as"]
    #[doc = " it was passed in (before it was resolved)"]
    pub fn node_handle_getUnresolvedNamespace(
        nh: *mut node_handle,
    ) -> *const ::std::os::raw::c_char;
}
